--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+[tool.pdm.scripts]
+build = "python -Im build"
+check-wheel-contents = "python -Im check_wheel_contents"
+check-readme = "python -Im twine check --strict"
+wheel = "python -Im wheel"
+
 [project]
 name = "build-and-inspect-python-package"
 version = "0" # we're not an actual package.
@@ -9,5 +19,5 @@ dependencies = [
     "twine>=4.0.2",
     "wheel>=0.38.4",
 ]
-license = {text = "MIT"}
+license = { text = "MIT" }
 requires-python = ">=3.10"
