--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,7 @@ outputs:
 
 runs:
   using: composite
+
   steps:
     - name: Resolve Lock Path
       shell: bash
@@ -48,9 +49,11 @@ runs:
         PROJECT=$(pwd)
         SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
 
-        pdm run -p ${{ github.action_path }} build --outdir /tmp/baipp/dist "$PROJECT"
+        pdm run build --outdir /tmp/baipp/dist "$PROJECT"
       shell: bash
       working-directory: ${{ inputs.path }}
+      env:
+        PDM_PROJECT: ${{ github.action_path }}
 
     - name: Set output
       id: setter
@@ -68,24 +71,30 @@ runs:
         name: Packages
         path: /tmp/baipp/dist/*
 
-    - run: pdm run -p ${{ github.action_path }} check-wheel-contents /tmp/baipp/dist/*.whl
+    - run: pdm run check-wheel-contents /tmp/baipp/dist/*.whl
       shell: bash
       working-directory: ${{ inputs.path }}
+      env:
+        PDM_PROJECT: ${{ github.action_path }}
 
     - name: Check PyPI README
       shell: bash
       working-directory: ${{ inputs.path }}
-      run: pdm run -p ${{ github.action_path }} check-readme /tmp/baipp/dist/*
+      run: pdm run check-readme /tmp/baipp/dist/*
+      env:
+        PDM_PROJECT: ${{ github.action_path }}
 
     - name: Show wheel & SDist contents hierarchically, including metadata.
       shell: bash
       working-directory: ${{ inputs.path }}
+      env:
+        PDM_PROJECT: ${{ github.action_path }}
       run: |
         cd /tmp/baipp/dist
         mkdir -p out/sdist
         mkdir -p out/wheels
 
-        pdm run -p ${{ github.action_path }} wheel unpack --dest /tmp/baipp/dist/out/wheels /tmp/baipp/dist/*.whl
+        pdm run wheel unpack --dest /tmp/baipp/dist/out/wheels /tmp/baipp/dist/*.whl
         tar xf *.tar.gz -C out/sdist
 
         echo -e '\n<details><summary>SDist contents</summary>\n' >> $GITHUB_STEP_SUMMARY
