Use PDM only for management again
This reverts commit 192f8cfae7d09d2fbe1f8e933bf2e1ea4c3e23f5.

--- a/action.yml
+++ b/action.yml
@@ -18,42 +18,35 @@ outputs:
 
 runs:
   using: composite
-
   steps:
-    - name: Resolve Lock Path
-      shell: bash
-      run: echo "PDM_CACHE=$(realpath ${{ github.action_path }}/pdm.lock)" >>$GITHUB_ENV
-
-    - uses: pdm-project/setup-pdm@v3
-      id: setup-pdm
+    - uses: actions/setup-python@v4
+      id: python-baipp
       with:
-        python-version: 3.x
-        update-python: false
-        cache: true
-        cache-dependency-path: ${{ env.PDM_CACHE }}
+        python-version: "3.x"
+        update-environment: false
+        cache: pip
 
     - name: Create venv for tools
+      run: ${{ steps.python-baipp.outputs.python-path }} -Im venv /tmp/baipp
       shell: bash
-      run: |
-        cd ${{ github.action_path }}
 
-        pdm venv create --name baipp ${{ steps.setup-pdm.outputs.python-path }}
-        pdm use --venv baipp
-        pdm sync
-        pdm info --json
+    - name: Install our tools
+      run: >
+        /tmp/baipp/bin/python
+        -Im pip
+        --disable-pip-version-check
+        --no-python-version-warning
+        install -r ${{ github.action_path }}/requirements/tools.txt
+      shell: bash
 
     # Build SDist, then build wheel out of it.
     # Set 'SOURCE_DATE_EPOCH' based on the last commit for build
     # reproducibility.
-    - run: |
-        PROJECT=$(pwd)
+    - run: >
         SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
-
-        pdm run build --outdir /tmp/baipp/dist "$PROJECT"
+        /tmp/baipp/bin/python -m build --outdir /tmp/baipp/dist
       shell: bash
       working-directory: ${{ inputs.path }}
-      env:
-        PDM_PROJECT: ${{ github.action_path }}
 
     - name: Set output
       id: setter
@@ -71,30 +64,27 @@ runs:
         name: Packages
         path: /tmp/baipp/dist/*
 
-    - run: pdm run check-wheel-contents /tmp/baipp/dist/*.whl
+    - run: /tmp/baipp/bin/check-wheel-contents /tmp/baipp/dist/*.whl
       shell: bash
       working-directory: ${{ inputs.path }}
-      env:
-        PDM_PROJECT: ${{ github.action_path }}
 
     - name: Check PyPI README
       shell: bash
       working-directory: ${{ inputs.path }}
-      run: pdm run check-readme /tmp/baipp/dist/*
-      env:
-        PDM_PROJECT: ${{ github.action_path }}
+      run: >
+        /tmp/baipp/bin/python
+        -m twine check
+        --strict
+        /tmp/baipp/dist/*
 
     - name: Show wheel & SDist contents hierarchically, including metadata.
       shell: bash
       working-directory: ${{ inputs.path }}
-      env:
-        PDM_PROJECT: ${{ github.action_path }}
       run: |
         cd /tmp/baipp/dist
         mkdir -p out/sdist
         mkdir -p out/wheels
-
-        pdm run wheel unpack --dest /tmp/baipp/dist/out/wheels /tmp/baipp/dist/*.whl
+        /tmp/baipp/bin/python -m wheel unpack --dest out/wheels *.whl
         tar xf *.tar.gz -C out/sdist
 
         echo -e '\n<details><summary>SDist contents</summary>\n' >> $GITHUB_STEP_SUMMARY
@@ -121,7 +111,7 @@ runs:
       shell: bash
       working-directory: /tmp/baipp/dist/out/sdist/
       run: |
-        cat */PKG-INFO | ${{ steps.setup-pdm.outputs.python-path }} -c '
+        cat */PKG-INFO | python -c '
         import email.parser
         import sys
 
