--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -27,4 +27,4 @@ jobs:
           python-version: 3.x
           cache: true
 
-      - run: pdm export --format requirements >tools.txt
+      - run: pdm export --format requirements >requirements/tools.txt
