--- a/action.yml
+++ b/action.yml
@@ -25,12 +25,12 @@ runs:
         python-version: "3.x"
         update-environment: false
 
-    - name: Create venv for tools
-      run: ${{ steps.python-baipp.outputs.python-path }} -Im venv /tmp/baipp
+    - name: Install uv
+      run: ${{ steps.python-baipp.outputs.python-path }} -Im pip install uv
       shell: bash
 
-    - name: Install uv
-      run: /tmp/baipp/bin/python -Im pip install uv==0.1.3
+    - name: Create venv for tools
+      run: ${{ steps.python-baipp.outputs.python-path }} -Im uv venv /tmp/baipp
       shell: bash
 
     - name: Install our tools
