--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -49,7 +49,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # Only open a PR if the branch is not attached to an existing one
         run: |
-          PR=$(gh pr list --head ${{ env.BRANCH_NAME }} --json number -q '.[0].number')
+          PR=$(gh pr list --base 1.5-fixes --head ${{ env.BRANCH_NAME }} --json number -q '.[0].number')
           if [ -z $PR ]; then
             gh pr create \
             --head ${{ env.BRANCH_NAME }} \
