--- a/action.yml
+++ b/action.yml
@@ -45,8 +45,9 @@ runs:
     # Build SDist, then build wheel out of it if user didn't forbid it.
     # Set 'SOURCE_DATE_EPOCH' based on the last commit for build
     # reproducibility.
-    - run: >
-        SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
+    - run: |
+        export SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
+
         if [[ "${{ inputs.skip-wheel }}" == "true" ]]; then
           /tmp/baipp/bin/python -m build --sdist --outdir /tmp/baipp/dist
         else
