--- a/action.yml
+++ b/action.yml
@@ -74,7 +74,7 @@ runs:
 
     - name: Check wheel contents if one was built
       run: |
-        if [[ ${{ inputs.skip-wheel }} != 'true' ]]; then
+        if [[ "${{ inputs.skip-wheel }}" != 'true' ]]; then
           /tmp/baipp/bin/check-wheel-contents /tmp/baipp/dist/*.whl
         fi
       shell: bash
@@ -101,7 +101,7 @@ runs:
         (cd /tmp/baipp/dist/out/sdist && tree -Da --timefmt="%Y-%m-%dT%H:%M:%SZ" * | sed 's/^/    /' | tee -a $GITHUB_STEP_SUMMARY)
         echo -e '\n</details>\n' >> $GITHUB_STEP_SUMMARY
 
-        if [[ ${{ inputs.skip-wheel }} != 'true' ]]; then
+        if [[ "${{ inputs.skip-wheel" }} != 'true' ]]; then
             mkdir -p out/wheels
             /tmp/baipp/bin/python -m wheel unpack --dest out/wheels *.whl
 
