--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,11 @@
 
       check-structlog:
         name: Build & verify the structlog package.
-        runs-on: ubuntu-latest
+        strategy:
+          fail-fast: false
+          matrix:
+            os: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: ${{ matrix.os }}
 
         steps:
           - uses: actions/checkout@v4
@@ -52,6 +56,6 @@
             id: baipp
             with:
               path: structlog
-              upload-name-suffix: "-structlog"
+              upload-name-suffix: "-structlog-${{ matrix.os }}"
 
           - run: echo Packages can be found at ${{ steps.baipp.outputs.dist }}
