--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@
         strategy:
           fail-fast: false
           matrix:
-            os: [ubuntu-latest, macos-latest, windows-latest]
+            os: [ubuntu-latest, macos-latest]
         runs-on: ${{ matrix.os }}
 
         steps:
