--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,11 +36,7 @@
 
       check-structlog:
         name: Build & verify the structlog package.
-        strategy:
-          fail-fast: false
-          matrix:
-            os: [ubuntu-latest, macos-latest]
-        runs-on: ${{ matrix.os }}
+        runs-on: ubuntu-latest
 
         steps:
           - uses: actions/checkout@v4
@@ -56,6 +52,6 @@
             id: baipp
             with:
               path: structlog
-              upload-name-suffix: "-structlog-${{ matrix.os }}"
+              upload-name-suffix: "-structlog"
 
           - run: echo Packages can be found at ${{ steps.baipp.outputs.dist }}
