Add upload-name-suffix (#97)
* Add upload-name-suffix

So you can build more than one package per workflow. This also allows us to join our CI workflows again.

Fixes #92

* add changelog entry

* It's plural

* It's only one CI again

* Use de-dup for cross-platform testing

* Add Windows

* Clarify platform support

* How does macOS not have a tree command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 ---
-    name: CI w/ argon2-cffi-bindings
+    name: CI
 
     on:
       push:
@@ -33,3 +33,25 @@
             with:
               path: hynek/argon2-cffi-bindings
               skip-wheel: 'true'
+
+      check-structlog:
+        name: Build & verify the structlog package.
+        runs-on: ubuntu-latest
+
+        steps:
+          - uses: actions/checkout@v4
+            with:
+              repository: hynek/structlog
+              path: structlog
+
+          - uses: actions/checkout@v4
+            with:
+              path: action
+
+          - uses: ./action
+            id: baipp
+            with:
+              path: structlog
+              upload-name-suffix: "-structlog"
+
+          - run: echo Packages can be found at ${{ steps.baipp.outputs.dist }}
