--- a/.github/workflows/pypa-sampleproject.yml
+++ b/.github/workflows/pypa-sampleproject.yml
@@ -1,12 +1,10 @@
 ---
-
-name: PyPA sampleproject tested over declared interpreters
+name: PyPA sample project tested over declared interpreters
 
 on:
   push:
     branches: [main]
   pull_request:
-    branches: [main]
   workflow_dispatch:
 
 env:
@@ -37,7 +35,7 @@ jobs:
     needs: build-package
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{fromJson(needs.build-package.outputs.python-versions)}}
+      matrix: ${{ fromJson(needs.build-package.outputs.python-versions) }}
 
     steps:
       - uses: actions/setup-python@v4
@@ -52,6 +50,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: pypa/sampleproject
-      - run: python -m pytest tests/
+      - run: python -Im pytest tests/
 
 ...
