--- a/action.yml
+++ b/action.yml
@@ -22,7 +22,21 @@ inputs:
 outputs:
   dist:
     description: The location of the built packages.
-    value: ${{ steps.setter.outputs.dist }}
+    value: ${{ steps.dist-location-setter.outputs.dist }}
+  supported_python_classifiers_json_array:
+    description: >
+      A JSON array that contains all classifier-declared supported Python
+      versions. When loaded using the 'fromJson' function, this can be assigned
+      to a matrix strategy key (for example, `python-version`).
+
+    value: ${{ steps.supported-pythons-setter.outputs.supported_python_classifiers_json_array }}
+  supported_python_classifiers_json_job_matrix_value:
+    description: >
+      Same as 'supported_python_classifiers_json_array', except it's already a
+      JSON mapping from "python-version" to a list of all classifier-declared
+      supported Python versions. In other words, you can assign it directly to
+      the 'strategy.matrix' key.
+    value: ${{ steps.supported-pythons-setter.outputs.supported_python_classifiers_json_job_matrix_value }}
 
 runs:
   using: composite
@@ -78,7 +92,7 @@ runs:
       working-directory: ${{ inputs.path }}
 
     - name: Set output
-      id: setter
+      id: dist-location-setter
       shell: bash
       run: echo "dist=/tmp/baipp/dist" >>$GITHUB_OUTPUT
 
@@ -165,3 +179,20 @@ runs:
       with:
         name: PyPI README${{ inputs.upload-name-suffix }}
         path: /tmp/baipp/dist/out/sdist/PyPI-README.*
+
+    - name: Generate JSON objects of supported Python versions
+      id: supported-pythons-setter
+      shell: bash
+      working-directory: /tmp/baipp/dist/out/sdist/
+      run: |
+          cat */PKG-INFO | python -c '
+          import json, re, sys
+          match_classifier = re.compile(
+              r"\s*Classifier: Programming Language :: Python :: (\d+\.\d+)$"
+          ).match
+          version_tokens = [
+              m.group(1).strip() for l in sys.stdin.readlines() if (m := match_classifier(l))
+          ]
+          print(f"supported_python_classifiers_json_array={json.dumps(version_tokens)}")
+          print(f"""supported_python_classifiers_json_job_matrix_value={json.dumps({"python-version": version_tokens})}""")
+          ' >> $GITHUB_OUTPUT
