Add debug output

--- a/action.yml
+++ b/action.yml
@@ -81,6 +81,7 @@ runs:
     # reproducibility.
     - name: Build package
       run: |
+        echo Setting SOURCE_DATE_EPOCH to $(git log -1 --pretty=%ci).
         export SOURCE_DATE_EPOCH=$(git log -1 --pretty=%ct)
 
         if [[ "${{ inputs.skip-wheel }}" == "true" ]]; then
