Stop wasting time/energy

--- a/.github/workflows/ci-supported-pythons.yml
+++ b/.github/workflows/ci-supported-pythons.yml
@@ -70,6 +70,9 @@ jobs:
           # Ensure tests run against wheel.
           rm -rf src
 
-      - run: python -Im tox run --installpkg dist/*.whl -f py$(echo ${{ matrix.python-version }} | tr -d .)
+      # To conserve CI resources, we've commented the next step out to not
+      # actually run the tests. Just remove the 'echo' to run them.
+      - name: Run tox environments for ${{ matrix.python-version }}
+        run: echo python -Im tox run --installpkg dist/*.whl -f py$(echo ${{ matrix.python-version }} | tr -d .)
 
 ...
