--- a/action.yml
+++ b/action.yml
@@ -47,9 +47,7 @@ runs:
         python-version: "3.x"
         update-environment: false
 
-    - name: Install uv
-      run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      shell: bash
+    - uses: hynek/setup-cached-uv@8f76bff4e5cc
 
     - name: Find uv cache
       run: echo "UV_CACHE=$(uv cache dir)" >>$GITHUB_ENV
